Added returning JSON to client, with band,track,and album urls, along with displying all three in client

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,15 @@
 </div>
 
 </br>
+
+<div id = "track_links">
+<a id = "band_url" class="track_link" href=""></a>
+<a id = "album_url" class="track_link" href=""></a>
+<a id = "track_url" class = track_link" href=""></a>
+</div>
+
+</br>
+
 <div id = 'audio_div' class = 'audio_div'>
 <audio id="player" class="audio" onended="next()" autoplay controls>No Audio?</audio>
 <button id="next_button" class="next_button" onclick="next()">>></button>
