General bug fixes, added AND search feature with quotes

--- a/client/index.html
+++ b/client/index.html
@@ -36,9 +36,9 @@
 </div>
 
 <div id = "track_links" class = "track_links">
-	<a id = "band_url" class="track_link" href=""></a></br>
-	<a id = "album_url" class="track_link" href=""></a></br>
-	<a id = "track_url" class = track_link" href=""></a></br>
+	<a id = "band_url" class="track_link" target="_blank" href=""></a></br>
+	<a id = "album_url" class="track_link" target="_blank" href=""></a></br>
+	<a id = "track_url" class = track_link" target="_blank" href=""></a></br>
 </div>
 
 </div>
