Added message inteface to frontend, bugfixes, added support for previous tags

--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,13 @@
 
 <head>
 <script src="music.js" type="text/javascript"></script>
+<script src="message.js" type="text/javascript"></script>
 <link href="default.css" rel="stylesheet" type="text/css">
+<link href="message.css" rel="stylesheet" type="text/css">
 </head>
 
 <body onload="init()">
 
-<h1 id="header" class="header"> Bandora </h1>
 
 <div id = "interface" class = "interface">
 
@@ -45,5 +46,14 @@
 
 </div>
 
+<div id = "message_container_div" class = "message_container">
+
+<div id = "message_div" class = "hidden_message">
+	<label id = "message_label" class = "message_label"></label>
+</div>
+
+</div>
+
 </body>
+
 </html>
